--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,24 +4,30 @@
     <thead>
     <tr>
         <th scope="col">City Name</th>
-        <th scope="col">Latitude</th>
-        <th scope="col">Longitude</th>
-        <th scope="col">Country</th>
-        <th scope="col">Abbreviation</th>
-        <th scope="col">Capital Status</th>
-        <th scope="col">Population</th>
+        <th scope="col">Latitude Degrees</th>
+        <th scope="col">Latitude Minutes</th>
+        <th scope="col">Latitude Seconds</th>
+        <th scope="col">North/South</th>
+        <th scope="col">Longitude Degree</th>
+        <th scope="col">Longitude Minutes</th>
+        <th scope="col">Longitude Seconds</th>
+        <th scope="col">East/West</th>
+        <th scope="col">State</th>
     </tr>
     </thead>
     <tbody>
     {% for city in cities %}
     <tr>
-        <td><a href="view/{{city.id}}">{{ city.fldName }}</a></td>
-        <td>{{ city.fldLat }}</td>
-        <td>{{ city.fldLong }}</td>
-        <td>{{ city.fldCountry }}</td>
-        <td>{{ city.fldAbbreviation }}</td>
-        <td>{{ city.fldCapitalStatus }}</td>
-        <td>{{ city.fldPopulation }}</td>
+        <td><a href="view/{{city.id}}">{{ city.City }}</a></td>
+        <td>{{ city.LatD }}</td>
+        <td>{{ city.LatM }}</td>
+        <td>{{ city.LatS }}</td>
+        <td>{{ city.NS }}</td>
+        <td>{{ city.LongD }}</td>
+        <td>{{ city.LongM }}</td>
+        <td>{{ city.LongS }}</td>
+        <td>{{ city.EW }}</td>
+        <td>{{ city.State }}</td>
     </tr>
     {% endfor %}
     </tbody>
