--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -5,14 +5,19 @@
     <h5 class="card-title">{{ city.fldName }} - {{ city.fldAbbreviation }}</h5>
 
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">{{ city.fldLat }}</li>
-        <li class="list-group-item">{{ city.fldLong }}</li>
-        <li class="list-group-item">{{ city.fldCapitalStatus }}</li>
-        <li class="list-group-item">{{ city.fldCountry }}</li>
-        <li class="list-group-item">{{ city.fldPopulation }}</li>
+        <li class="list-group-item">{{ city.City }}</li>
+        <li class="list-group-item">{{ city.LatD }}</li>
+        <li class="list-group-item">{{ city.LatM }}</li>
+        <li class="list-group-item">{{ city.LatS }}</li>
+        <li class="list-group-item">{{ city.NS }}</li>
+        <li class="list-group-item">{{ city.LongD }}</li>
+        <li class="list-group-item">{{ city.LongM }}</li>
+        <li class="list-group-item">{{ city.LongS }}</li>
+        <li class="list-group-item">{{ city.EW }}</li>
+        <li class="list-group-item">{{ city.State }}</li>
     </ul>
     <div class="card-body">
-        <a href="/edit/{{city.id}}" class="card-link btn btn-primary">edit</a>
+        <a href="/edit/{{city.id}}" class="card-link btn btn-primary">Edit</a>
     </div>
 </div>
 <form action="/delete/{{city.id}}" method="post"><button type="submit" class="btn btn-danger">Delete</button></form>
