Feature: Reworked SQL, HTMLs, and app.py to fit new data

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,9 +23,9 @@
         <td>{{ city.LatM }}</td>
         <td>{{ city.LatS }}</td>
         <td>{{ city.NS }}</td>
-        <td>{{ city.LongD }}</td>
-        <td>{{ city.LongM }}</td>
-        <td>{{ city.LongS }}</td>
+        <td>{{ city.LonD }}</td>
+        <td>{{ city.LonM }}</td>
+        <td>{{ city.LonS }}</td>
         <td>{{ city.EW }}</td>
         <td>{{ city.State }}</td>
     </tr>
