--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -4,42 +4,42 @@
     <div class="row">
         <div class="col">
             <label for="LatD">Latitude Degrees</label>
-            <input id="LatD" type="text" class="form-control" placeholder="Latitude Degrees" name="LatD" value="{{city.LatD}}">
+            <input id="LatD" type="text" class="form-control" placeholder="Latitude Degrees" name="LatD">
         </div>
         <div class="col">
             <label for="LatM">Latitude Minutes</label>
             <input id="LatM" type="text" class="form-control" placeholder="Latitude Minutes"
-                   name="LatM" value="{{city.LatM}}">
+                   name="LatM">
         </div>
         <div class="col">
             <label for="LatS">Latitude Seconds</label>
             <input id="LatS" type="text" class="form-control" placeholder="Latitude Seconds"
-                   name="LatS" value="{{city.LatS}}">
+                   name="LatS">
         </div>
         <div class="col">
             <label for="NS">North South</label>
-            <input id="NS" type="text" class="form-control" placeholder="NS" name="NS" value="{{city.NS}}">
+            <input id="NS" type="text" class="form-control" placeholder="NS" name="NS">
         </div>
     </div>
 
     <div class="row">
         <div class="col">
             <label for="LonD">Longitude Degrees</label>
-            <input id="LonD" type="text" class="form-control" placeholder="Longitude Degrees" name="LonD" value="{{city.LonD}}">
+            <input id="LonD" type="text" class="form-control" placeholder="Longitude Degrees" name="LonD">
         </div>
         <div class="col">
             <label for="LonM">Longitude Minutes</label>
             <input id="LonM" type="text" class="form-control" placeholder="Longitude Minutes"
-                   name="LonM" value="{{city.LonM}}">
+                   name="LonM">
         </div>
         <div class="col">
             <label for="LonS">Longitude Seconds</label>
             <input id="LonS" type="text" class="form-control" placeholder="Longitude Seconds"
-                   name="LonS" value="{{city.LonS}}">
+                   name="LonS">
         </div>
         <div class="col">
             <label for="EW">East West</label>
-            <input id="EW" type="text" class="form-control" placeholder="EW" name="EW" value="{{city.EW}}">
+            <input id="EW" type="text" class="form-control" placeholder="EW" name="EW">
         </div>
     </div>
     <div class="row">
@@ -47,11 +47,11 @@
             <label for="City">City</label>
 
             <input id="City" type="text" class="form-control" placeholder="City"
-                   name="City" value="{{city.City}}">
+                   name="City">
         </div>
         <div class="col">
             <label for="State">State</label>
-            <input id="State" type="text" class="form-control" placeholder="State" name="State" value="{{city.State}}">
+            <input id="State" type="text" class="form-control" placeholder="State" name="State">
         </div>
     </div>
     <button type="submit" class="btn btn-success">Create</button>
