--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -5,16 +5,16 @@
     <h5 class="card-title">{{ city.fldName }} - {{ city.fldAbbreviation }}</h5>
 
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">{{ city.City }}</li>
-        <li class="list-group-item">{{ city.LatD }}</li>
-        <li class="list-group-item">{{ city.LatM }}</li>
-        <li class="list-group-item">{{ city.LatS }}</li>
-        <li class="list-group-item">{{ city.NS }}</li>
-        <li class="list-group-item">{{ city.LongD }}</li>
-        <li class="list-group-item">{{ city.LongM }}</li>
-        <li class="list-group-item">{{ city.LongS }}</li>
-        <li class="list-group-item">{{ city.EW }}</li>
-        <li class="list-group-item">{{ city.State }}</li>
+        <li class="list-group-item">City Name: {{ city.City }}</li>
+        <li class="list-group-item"> Latitude Degrees: {{ city.LatD }}</li>
+        <li class="list-group-item">Latitude Minutes: {{ city.LatM }}</li>
+        <li class="list-group-item">Latitude Seconds: {{ city.LatS }}</li>
+        <li class="list-group-item">North/South: {{ city.NS }}</li>
+        <li class="list-group-item">Longitude Degrees: {{ city.LonD }}</li>
+        <li class="list-group-item">Longitude Minutes: {{ city.LonM }}</li>
+        <li class="list-group-item">Longitude Seconds: {{ city.LonS }}</li>
+        <li class="list-group-item">East/West: {{ city.EW }}</li>
+        <li class="list-group-item">State: {{ city.State }}</li>
     </ul>
     <div class="card-body">
         <a href="/edit/{{city.id}}" class="card-link btn btn-primary">Edit</a>
